Add method for read resoruces from yaml files + fixes